--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,79 +4,114 @@
 @custom-variant dark (&:is(.dark *));
 
 :root {
-  --background: oklch(1 0 0);
-  --foreground: oklch(0.145 0 0);
-  --card: oklch(1 0 0);
-  --card-foreground: oklch(0.145 0 0);
-  --popover: oklch(1 0 0);
-  --popover-foreground: oklch(0.145 0 0);
-  --primary: oklch(0.205 0 0);
-  --primary-foreground: oklch(0.985 0 0);
-  --secondary: oklch(0.97 0 0);
-  --secondary-foreground: oklch(0.205 0 0);
-  --muted: oklch(0.97 0 0);
-  --muted-foreground: oklch(0.556 0 0);
-  --accent: oklch(0.97 0 0);
-  --accent-foreground: oklch(0.205 0 0);
-  --destructive: oklch(0.577 0.245 27.325);
-  --destructive-foreground: oklch(0.577 0.245 27.325);
-  --border: oklch(0.922 0 0);
-  --input: oklch(0.922 0 0);
-  --ring: oklch(0.708 0 0);
-  --chart-1: oklch(0.646 0.222 41.116);
-  --chart-2: oklch(0.6 0.118 184.704);
-  --chart-3: oklch(0.398 0.07 227.392);
-  --chart-4: oklch(0.828 0.189 84.429);
-  --chart-5: oklch(0.769 0.188 70.08);
-  --radius: 0.625rem;
-  --sidebar: oklch(0.985 0 0);
-  --sidebar-foreground: oklch(0.145 0 0);
-  --sidebar-primary: oklch(0.205 0 0);
-  --sidebar-primary-foreground: oklch(0.985 0 0);
-  --sidebar-accent: oklch(0.97 0 0);
-  --sidebar-accent-foreground: oklch(0.205 0 0);
-  --sidebar-border: oklch(0.922 0 0);
-  --sidebar-ring: oklch(0.708 0 0);
+  --background: oklch(0.9646 0.0057 84.5663);
+  --foreground: oklch(0.2178 0 0);
+  --card: oklch(0.9646 0.0057 84.5663);
+  --card-foreground: oklch(0.2178 0 0);
+  --popover: oklch(0.9646 0.0057 84.5663);
+  --popover-foreground: oklch(0.2178 0 0);
+  --primary: oklch(0.5790 0.2343 358.9477);
+  --primary-foreground: oklch(1.0000 0 0);
+  --secondary: oklch(0.9410 0.0300 12.5800);
+  --secondary-foreground: oklch(0.9646 0.0057 84.5663);
+  --muted: oklch(0.9377 0.0087 84.5734);
+  --muted-foreground: oklch(0.5103 0 0);
+  --accent: #f0eee;
+  --accent-foreground: oklch(0.5790 0.2343 358.9477);
+  --destructive: oklch(0.4437 0.1613 26.8994);
+  --destructive-foreground: oklch(1.0000 0 0);
+  --border: oklch(0.8857 0.0100 87.4763);
+  --input: oklch(0.8857 0.0100 87.4763);
+  --ring: oklch(0.5790 0.2343 358.9477);
+  --chart-1: oklch(0.5790 0.2343 358.9477);
+  --chart-2: oklch(0.2972 0 0);
+  --chart-3: oklch(0.4461 0.0263 256.8018);
+  --chart-4: oklch(0.7137 0.0192 261.3246);
+  --chart-5: oklch(0.5790 0.2343 358.9477);
+  --sidebar: oklch(0.9495 0.0058 84.5666);
+  --sidebar-foreground: oklch(0.2178 0 0);
+  --sidebar-primary: oklch(0.5790 0.2343 358.9477);
+  --sidebar-primary-foreground: oklch(1.0000 0 0);
+  --sidebar-accent: oklch(0.8857 0.0100 87.4763);
+  --sidebar-accent-foreground: oklch(0.2178 0 0);
+  --sidebar-border: oklch(0.8857 0.0100 87.4763);
+  --sidebar-ring: oklch(0.5790 0.2343 358.9477);
+  --font-sans: Montserrat, sans-serif;
+  --font-serif: Merriweather, serif;
+  --font-mono: Source Code Pro, monospace;
+  --radius: 0.5rem;
+  --shadow-x: 0;
+  --shadow-y: 2px;
+  --shadow-blur: 4px;
+  --shadow-spread: 0px;
+  --shadow-opacity: 0.08;
+  --shadow-color: 0 0 0;
+  --shadow-2xs: 0 2px 4px 0px hsl(0 0 0 / 0.04);
+  --shadow-xs: 0 2px 4px 0px hsl(0 0 0 / 0.04);
+  --shadow-sm: 0 2px 4px 0px hsl(0 0 0 / 0.08), 0 1px 2px -1px hsl(0 0 0 / 0.08);
+  --shadow: 0 2px 4px 0px hsl(0 0 0 / 0.08), 0 1px 2px -1px hsl(0 0 0 / 0.08);
+  --shadow-md: 0 2px 4px 0px hsl(0 0 0 / 0.08), 0 2px 4px -1px hsl(0 0 0 / 0.08);
+  --shadow-lg: 0 2px 4px 0px hsl(0 0 0 / 0.08), 0 4px 6px -1px hsl(0 0 0 / 0.08);
+  --shadow-xl: 0 2px 4px 0px hsl(0 0 0 / 0.08), 0 8px 10px -1px hsl(0 0 0 / 0.08);
+  --shadow-2xl: 0 2px 4px 0px hsl(0 0 0 / 0.20);
+  --tracking-normal: 0.01em;
+  --spacing: 0.25rem;
 }
 
 .dark {
-  --background: oklch(0.145 0 0);
-  --foreground: oklch(0.985 0 0);
-  --card: oklch(0.145 0 0);
-  --card-foreground: oklch(0.985 0 0);
-  --popover: oklch(0.145 0 0);
-  --popover-foreground: oklch(0.985 0 0);
-  --primary: oklch(0.985 0 0);
-  --primary-foreground: oklch(0.205 0 0);
-  --secondary: oklch(0.269 0 0);
-  --secondary-foreground: oklch(0.985 0 0);
-  --muted: oklch(0.269 0 0);
-  --muted-foreground: oklch(0.708 0 0);
-  --accent: oklch(0.269 0 0);
-  --accent-foreground: oklch(0.985 0 0);
-  --destructive: oklch(0.396 0.141 25.723);
-  --destructive-foreground: oklch(0.637 0.237 25.331);
-  --border: oklch(0.269 0 0);
-  --input: oklch(0.269 0 0);
-  --ring: oklch(0.439 0 0);
-  --chart-1: oklch(0.488 0.243 264.376);
-  --chart-2: oklch(0.696 0.17 162.48);
-  --chart-3: oklch(0.769 0.188 70.08);
-  --chart-4: oklch(0.627 0.265 303.9);
-  --chart-5: oklch(0.645 0.246 16.439);
-  --sidebar: oklch(0.205 0 0);
-  --sidebar-foreground: oklch(0.985 0 0);
-  --sidebar-primary: oklch(0.488 0.243 264.376);
-  --sidebar-primary-foreground: oklch(0.985 0 0);
-  --sidebar-accent: oklch(0.269 0 0);
-  --sidebar-accent-foreground: oklch(0.985 0 0);
-  --sidebar-border: oklch(0.269 0 0);
-  --sidebar-ring: oklch(0.439 0 0);
+  --background: oklch(0.2142 0.0025 67.6928);
+  --foreground: oklch(0.9646 0.0057 84.5663);
+  --card: oklch(0.2565 0.0040 84.5842);
+  --card-foreground: oklch(0.9646 0.0057 84.5663);
+  --popover: oklch(0.2565 0.0040 84.5842);
+  --popover-foreground: oklch(0.9646 0.0057 84.5663);
+  --primary: oklch(0.5790 0.2343 358.9477);
+  --primary-foreground: oklch(1.0000 0 0);
+  --secondary: oklch(0.3533 0.0058 78.2531);
+  --secondary-foreground: oklch(0.9646 0.0057 84.5663);
+  --muted: oklch(0.2812 0.0039 84.5817);
+  --muted-foreground: oklch(0.7118 0.0129 286.0665);
+  --accent: oklch(0.3145 0.0045 67.6614);
+  --accent-foreground: oklch(0.5790 0.2343 358.9477);
+  --destructive: oklch(0.6368 0.2078 25.3313);
+  --destructive-foreground: oklch(1.0000 0 0);
+  --border: oklch(0.3145 0.0045 67.6614);
+  --input: oklch(0.3145 0.0045 67.6614);
+  --ring: oklch(0.5790 0.2343 358.9477);
+  --chart-1: oklch(0.5790 0.2343 358.9477);
+  --chart-2: oklch(0.9646 0.0057 84.5663);
+  --chart-3: oklch(0.7118 0.0129 286.0665);
+  --chart-4: oklch(0.4419 0.0146 285.7864);
+  --chart-5: oklch(0.5790 0.2343 358.9477);
+  --sidebar: oklch(0.2142 0.0025 67.6928);
+  --sidebar-foreground: oklch(0.9646 0.0057 84.5663);
+  --sidebar-primary: oklch(0.5790 0.2343 358.9477);
+  --sidebar-primary-foreground: oklch(1.0000 0 0);
+  --sidebar-accent: oklch(0.3145 0.0045 67.6614);
+  --sidebar-accent-foreground: oklch(0.9646 0.0057 84.5663);
+  --sidebar-border: oklch(0.3145 0.0045 67.6614);
+  --sidebar-ring: oklch(0.5790 0.2343 358.9477);
+  --font-sans: Montserrat, sans-serif;
+  --font-serif: Merriweather, serif;
+  --font-mono: Source Code Pro, monospace;
+  --radius: 0.5rem;
+  --shadow-x: 0;
+  --shadow-y: 4px;
+  --shadow-blur: 12px;
+  --shadow-spread: 0px;
+  --shadow-opacity: 0.4;
+  --shadow-color: 0 0 0;
+  --shadow-2xs: 0 4px 12px 0px hsl(0 0 0 / 0.20);
+  --shadow-xs: 0 4px 12px 0px hsl(0 0 0 / 0.20);
+  --shadow-sm: 0 4px 12px 0px hsl(0 0 0 / 0.40), 0 1px 2px -1px hsl(0 0 0 / 0.40);
+  --shadow: 0 4px 12px 0px hsl(0 0 0 / 0.40), 0 1px 2px -1px hsl(0 0 0 / 0.40);
+  --shadow-md: 0 4px 12px 0px hsl(0 0 0 / 0.40), 0 2px 4px -1px hsl(0 0 0 / 0.40);
+  --shadow-lg: 0 4px 12px 0px hsl(0 0 0 / 0.40), 0 4px 6px -1px hsl(0 0 0 / 0.40);
+  --shadow-xl: 0 4px 12px 0px hsl(0 0 0 / 0.40), 0 8px 10px -1px hsl(0 0 0 / 0.40);
+  --shadow-2xl: 0 4px 12px 0px hsl(0 0 0 / 1.00);
 }
 
 @theme inline {
-  --font-sans: 'Geist', 'Geist Fallback';
-  --font-mono: 'Geist Mono', 'Geist Mono Fallback';
   --color-background: var(--background);
   --color-foreground: var(--foreground);
   --color-card: var(--card);
@@ -101,10 +136,6 @@
   --color-chart-3: var(--chart-3);
   --color-chart-4: var(--chart-4);
   --color-chart-5: var(--chart-5);
-  --radius-sm: calc(var(--radius) - 4px);
-  --radius-md: calc(var(--radius) - 2px);
-  --radius-lg: var(--radius);
-  --radius-xl: calc(var(--radius) + 4px);
   --color-sidebar: var(--sidebar);
   --color-sidebar-foreground: var(--sidebar-foreground);
   --color-sidebar-primary: var(--sidebar-primary);
@@ -113,6 +144,35 @@
   --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
   --color-sidebar-border: var(--sidebar-border);
   --color-sidebar-ring: var(--sidebar-ring);
+
+  --font-sans: var(--font-sans);
+  --font-mono: var(--font-mono);
+  --font-serif: var(--font-serif);
+
+  --radius-sm: calc(var(--radius) - 4px);
+  --radius-md: calc(var(--radius) - 2px);
+  --radius-lg: var(--radius);
+  --radius-xl: calc(var(--radius) + 4px);
+
+  --shadow-2xs: var(--shadow-2xs);
+  --shadow-xs: var(--shadow-xs);
+  --shadow-sm: var(--shadow-sm);
+  --shadow: var(--shadow);
+  --shadow-md: var(--shadow-md);
+  --shadow-lg: var(--shadow-lg);
+  --shadow-xl: var(--shadow-xl);
+  --shadow-2xl: var(--shadow-2xl);
+
+  --tracking-tighter: calc(var(--tracking-normal) - 0.05em);
+  --tracking-tight: calc(var(--tracking-normal) - 0.025em);
+  --tracking-normal: var(--tracking-normal);
+  --tracking-wide: calc(var(--tracking-normal) + 0.025em);
+  --tracking-wider: calc(var(--tracking-normal) + 0.05em);
+  --tracking-widest: calc(var(--tracking-normal) + 0.1em);
+}
+
+body {
+  letter-spacing: var(--tracking-normal);
 }
 
 @layer base {
